Refactor code and add new functionalities
In this commit, unnecessary files were removed, namespaces were updated accordingly for database models, and various new files and functionalities were added. New functionalities include the addition of services for dependency injection, configurations, models for DTO responses, and methods related to users. Also, references to essential packages were added to various project files.

--- a/Componentes.Api/appsettings.Development.json
+++ b/Componentes.Api/appsettings.Development.json
@@ -9,5 +9,11 @@
     "ConnectionStrings": {
       "SqlServerConnection": "Server=database-componentes.cjm888oos0yl.us-east-1.rds.amazonaws.com;trusted_connection=true;Encrypt=false;Initial Catalog=ProyectoComponentes;Integrated Security=False;Persist Security Info=True;User ID=admin;Password=12345678"
     }
+  },
+  "EmailCredentials": {
+    "From": "andres91411@gmail.com",
+    "Password": "Fxts2904$",
+    "Smtp": "smtp.gmail.com",
+    "Port": "587"
   }
 }
