--- a/Componentes.Api/Componentes.Api.csproj
+++ b/Componentes.Api/Componentes.Api.csproj
@@ -8,13 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    </ItemGroup>
-
-    <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Componentes.Ioc\Componentes.Ioc.csproj" />
     </ItemGroup>
 
 </Project>
