--- a/Componentes.Core/Componentes.Core.csproj
+++ b/Componentes.Core/Componentes.Core.csproj
@@ -6,4 +6,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Componentes.Data\Componentes.Data.csproj" />
+      <ProjectReference Include="..\Componentes.Models\Componentes.Models.csproj" />
+      <ProjectReference Include="..\Componentes.Utilities\Componentes.Utilities.csproj" />
+    </ItemGroup>
+
 </Project>
