--- a/Componentes.Api/appsettings.Development.json
+++ b/Componentes.Api/appsettings.Development.json
@@ -8,12 +8,17 @@
   "AppSettings": {
     "ConnectionStrings": {
       "SqlServerConnection": "Server=database-componentes.cjm888oos0yl.us-east-1.rds.amazonaws.com;trusted_connection=true;Encrypt=false;Initial Catalog=ProyectoComponentes;Integrated Security=False;Persist Security Info=True;User ID=admin;Password=12345678"
+    },
+    "EmailCredentials": {
+      "From": "andres91411@gmail.com",
+      "Password": "Fxts2904$",
+      "Smtp": "smtp.gmail.com",
+      "Port": "587"
+    },
+    "JwtConfig": {
+      "Key": "ZhhXA9WF8fKTNEizsIxQlYKEusnYmDd62KGLRTS5MFw=",
+      "Issuer": "componentes-server",
+      "Audience": "componentes-ui"
     }
-  },
-  "EmailCredentials": {
-    "From": "andres91411@gmail.com",
-    "Password": "Fxts2904$",
-    "Smtp": "smtp.gmail.com",
-    "Port": "587"
   }
 }
