--- a/Componentes.Utilities/Componentes.Utilities.csproj
+++ b/Componentes.Utilities/Componentes.Utilities.csproj
@@ -8,9 +8,16 @@
 
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0-preview.5.24306.7" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0-preview.5.24306.7" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.5.24306.7" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.0-preview1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0-preview1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Componentes.Models\Componentes.Models.csproj" />
     </ItemGroup>
 
 </Project>
