Add 'GetAllUsers' endpoint and adjust JSON property naming
A new endpoint 'GetAllUsers' was added to the UserController to fetch all user data. Accompanying changes include augmenting the IUserService and IUserRepository with corresponding methods. Additionally, JsonProperty attributes were added to UserDto to ensure correct JSON naming conventions. Other minor adjustments include changing the Origin URL in IocExtension and slightly modifying the JWT claim names on token generation.

--- a/Componentes.Api/appsettings.Development.json
+++ b/Componentes.Api/appsettings.Development.json
@@ -7,7 +7,8 @@
   },
   "AppSettings": {
     "ConnectionStrings": {
-      "SqlServerConnection": "Server=database-componentes.cjm888oos0yl.us-east-1.rds.amazonaws.com;trusted_connection=true;Encrypt=false;Initial Catalog=ProyectoComponentes;Integrated Security=False;Persist Security Info=True;User ID=admin;Password=12345678"
+      "SqlServerConnection": "Server=localhost,1433;Database=ProyectoComponentes;User Id=sa;Password=YourSecurePassword!234;Encrypt=False;Persist Security Info=True;"
+
     },
     "EmailCredentials": {
       "From": "andres91411@gmail.com",
